--- a/setup.cfg
+++ b/setup.cfg
@@ -22,6 +22,7 @@ packages = wcpan.drive.cli
 namespace_packages = wcpan.drive
 python_requires = >=3.8
 install_requires =
+    Pillow >= 6.2.1
     PyYAML >= 3.12
     wcpan.drive.core >= 1.0.0
     wcpan.logger >= 1.2.3
