--- a/setup.cfg
+++ b/setup.cfg
@@ -22,8 +22,8 @@ packages = wcpan.drive.cli
 namespace_packages = wcpan.drive
 python_requires = >=3.8
 install_requires =
-    Pillow >= 6.2.1
-    PyYAML >= 3.12
-    wcpan.drive.core >= 1.0.0
-    wcpan.logger >= 1.2.3
-    wcpan.worker >= 4.1.2
+    Pillow ~= 6.2.1
+    PyYAML ~= 5.2
+    wcpan.drive.core ~= 1.0.0
+    wcpan.logger ~= 1.2.3
+    wcpan.worker ~= 4.1.2
