--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,8 +18,8 @@ python = "^3.11"
 Pillow = "^9.0"
 PyYAML = "^6.0"
 wcpan-drive-core = "^3.1.0"
-wcpan-worker = "^6.1.1"
 wcpan-logging = "^2.0.1"
+wcpan-queue = "^7.0.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.1.0"
