--- a/.github/workflows/unittest.yaml
+++ b/.github/workflows/unittest.yaml
@@ -21,6 +21,8 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
+      - name: Install
+        run: make
       - name: Lint
         run: make lint
       - name: Test
