--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ classifiers = [
 
 [tool.poetry.dependencies]
 python = "^3.12"
-Pillow = ">=9,<11"
+Pillow = "^10.4.0"
 PyYAML = "^6.0.1"
 wcpan-drive-core = "^4.1.0"
 wcpan-logging = "^2.0.3"
