feat: add pymediainfo

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ wcpan-drive-core = "^4.1.0"
 wcpan-logging = "^2.0.3"
 wcpan-queue = "^7.2.1"
 python-magic = "^0.4.27"
+pymediainfo = "^7.0.1"
 
 [tool.poetry.group.dev.dependencies]
 black = ">=23.11,<25.0"
