--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,7 @@ python-magic = "^0.4.27"
 pymediainfo = "^7.0.1"
 
 [tool.poetry.group.dev.dependencies]
-black = ">=23.11,<25.0"
+ruff = "^0.11.2"
 
 [build-system]
 requires = ["poetry-core"]
