--- a/.github/workflows/unittest.yaml
+++ b/.github/workflows/unittest.yaml
@@ -23,8 +23,8 @@ jobs:
           - "3.14t"
     steps:
       - uses: actions/checkout@v6
-      - name: Install poetry
-        run: pipx install poetry
+      - name: Set up uv
+        uses: astral-sh/setup-uv@v7
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v6
         with:
